<resources>
    <string name="app_name">TaxiService</string>
    <string name="content_description">image</string>
    <string name="title">Taxi Service</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_contact">Contact Number</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_code">Code</string>
    <string name="txt_resend">Resend</string>
    <string name="txt_edit_contact">Update</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="txt_username">Contact</string>
</resources>
