<?xml version="1.0" encoding="UTF-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/loginNsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen12dp"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/dimen30dp"
                android:contentDescription="@string/content_description"
                android:text="@string/app_name"
                app:layout_constraintBottom_toTopOf="@id/mcvLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/img_phone_verificatiton" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#f5f5f5"
                android:elevation="@dimen/dimen3dp"
                app:cardCornerRadius="@dimen/dimen6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCountryCode"
                            style="@style/TextAppearance.MaterialComponents.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/dimen9dp"
                            android:gravity="center"
                            android:minHeight="?actionBarSize"
                            android:text="+977" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilContact"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_contact">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etContact"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen6dp"
                        android:text="@string/txt_continue" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/codeVerifyNsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen12dp"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCodeVerify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/tvVerifyDetail"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen30dp"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/dimen6dp"
                android:text="Verification Code is sent to 9860585307. Please verify your contact!"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintBottom_toTopOf="@id/mcvCodeVerify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvCodeVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dimen3dp"
                app:cardBackgroundColor="#f5f5f5"
                app:cardCornerRadius="@dimen/dimen6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVerifyDetail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tilCode"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_code">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etCode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnVerify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen6dp"
                        android:text="@string/txt_verify" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/tvResendInfo"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="5"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/dimen6dp"
                android:text="If you don't get any response then click 'Resend', Click 'Edit Contact' to update number!"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcvCodeVerify" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnResend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen3dp"
                android:layout_marginTop="@dimen/dimen6dp"
                android:layout_marginEnd="@dimen/dimen3dp"
                android:text="@string/txt_resend"
                app:layout_constraintEnd_toStartOf="@id/btnEditContact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvResendInfo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen3dp"
                android:layout_marginTop="@dimen/dimen6dp"
                android:layout_marginEnd="@dimen/dimen3dp"
                android:text="@string/txt_edit_contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnResend"
                app:layout_constraintTop_toBottomOf="@id/tvResendInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>